  severe stress conditions (multiple drive autochangers, ...).
- Volumes are pruned only when absolutely necessary -- this may cause
  your database to grow.
- Socket level heartbeat is untested.
- Solaris door and even port files are no longer restored (equivalent
    to what we do with sockets).
- Solaris is untested
- Win32 servers are untested, and very likely not to work.

The major new features are:
- Much faster insertion of attributes (somewhere around 10 times),
  many thanks to Eric Bollengier and Marc Cousin. 
- First cut of bat (Bacula Administration Tool).  Note to build
  bat you must explicitly enable it on the ./configure line, you
  must have the Qt4 version 4.2 or later libraries loaded, and
  qmake and the other Qt4 tools must be available.  bat is ALPHA
  software.  A large part of the work was done by Dirk Bartley.
- Red/Black restore in memory tree (500 times faster loading).
- The Regex Where code to allow easier relocation of restored files 
  thanks to Eric.
- Socket level heartbeat for all connections (untested).
- posix_fadvise() use in the FD to improve performance.
- Simpler locking in the SD in the reservation system.
- Much improved Volume reservation code that should eliminate most
  conflicts experienced in multiple drive autochangers.
- Detection of file size/date change during backup if enabled.
- New Recycle Pool feature -- thanks to Eric.
- Efficient implementation of very large include/exclude lists.
- Volumes are no longer pruned during 'status dir'
- Pruning is now more efficient, and if a Volume is purged,
  during pruning, it is immediately discovered.

Other features or bug fixes:
- Fixed bugs: 856, 854, 845, 847, 846, 809, 772, 
  822, 825, 824, 808, 802, 797, 798, 795, 789, 791, 
  788, 780, 763, 782, 612, 767, 775, 621, 772, 764, 
  766, 621, 761, 755, 750, 741, 747, 742, 744, and 743.
- Only the minumum number of volumes are pruned rather than
  all volumes in the pool.
- wx-console renamed to bwx-console