@@ -52,6 +52,7 @@ Professional Needs:
 - Novell NSS backup http://www.novell.com/coolsolutions/tools/18952.html
 
 Priority:
+- Look at mincore: http://insights.oetiker.ch/linux/fadvise.html
 - Unicode input http://en.wikipedia.org/wiki/Byte_Order_Mark
 - How does restore JobId=nnn work? (Dirk)
 - What does: restore select fileset="TestSet" client="workplay-fd" pool="Default"
