@@ -1,6 +1,12 @@
               Technical notes on version 2.1
 
 General:
+22May07
+kes  Implement message callback so that GUI is sure to get all
+     daemon messages. Currently displayed in a dialog in bat.
+kes  Ignore SIGUSR2 (Bacula timer) in bat.
+kes  Apply regress patch from bug #859 to allow regress to work 
+     with Solaris compiler.
 21May07
 kes  Begin adding TLS support to bat.
 kes  Apply UTF-8/16 patch from Yves Orton <demerphq@gmail.com> to
